[gd_scene load_steps=25 format=2]

[ext_resource path="res://skrypty/playerDetection.gd" type="Script" id=1]
[ext_resource path="res://grafika/animation/boss-death.png" type="Texture" id=2]
[ext_resource path="res://skrypty/Monster-Boss2.gd" type="Script" id=3]
[ext_resource path="res://grafika/monster/boss-body.png" type="Texture" id=4]
[ext_resource path="res://grafika/monster/boss-background.png" type="Texture" id=5]
[ext_resource path="res://grafika/light.png" type="Texture" id=6]
[ext_resource path="res://instances/Monsters/Monster-Crystal1.tscn" type="PackedScene" id=7]
[ext_resource path="res://instances/Monsters/Monster-Crystal2.tscn" type="PackedScene" id=8]
[ext_resource path="res://instances/Monsters/Monster-Crystal3.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=163]
resource_name = "fire"
length = 3.6
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8, 2.4, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=165]
resource_name = "fire_off"
length = 3.6
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8, 2.4, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 7, 6, 5, 4, 0 ]
}

[sub_resource type="Animation" id=160]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=166]
resource_name = "summon"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=168]
resource_name = "summon_off"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 11, 10, 9, 0 ]
}

[sub_resource type="Animation" id=161]
resource_name = "idle"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1/Boss-background:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Monster1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CrystalHolder:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CrystalHolder/Monster-Crystal1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CrystalHolder/Monster-Crystal2:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CrystalHolder/Monster-Crystal3:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Monster1:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CrystalHolder:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=169]
resource_name = "idle2"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1/Boss-background:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Monster1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CrystalHolder:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Monster1:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CrystalHolder:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=170]
resource_name = "deathAnimation"
length = 3.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "makePlayerInvisible"
}, {
"args": [  ],
"method": "bossDeath"
} ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("AnimationPlayerDeath")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "BossDeath" ),
"times": PoolRealArray( 0.3 )
}

[sub_resource type="Animation" id=164]
resource_name = "fireAttack"
length = 23.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 7, 10, 12, 13, 13.2, 13.4, 13.6, 13.8, 23.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shakeScreen"
}, {
"args": [  ],
"method": "fireAttack1"
}, {
"args": [  ],
"method": "fireAttack2"
}, {
"args": [  ],
"method": "fireAttack1"
}, {
"args": [  ],
"method": "fireAttack3"
}, {
"args": [  ],
"method": "fireAttack4"
}, {
"args": [  ],
"method": "fireAttack5"
}, {
"args": [  ],
"method": "fireAttack6"
}, {
"args": [  ],
"method": "fireAttack7"
}, {
"args": [  ],
"method": "fireAttack7"
}, {
"args": [  ],
"method": "fireAttack7"
}, {
"args": [  ],
"method": "fireAttack7"
}, {
"args": [  ],
"method": "fireAttack7"
}, {
"args": [  ],
"method": "summonAttack"
} ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "fire_off", "summon" ),
"times": PoolRealArray( 15, 20 )
}

[sub_resource type="Animation" id=162]
resource_name = "startingAnimation"
length = 9.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartingExplosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StartingExplosion:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StartingExplosion:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.835294, 1, 0.784314 ), Color( 0, 0.835294, 1, 0.0980392 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "startIdleAnimation"
}, {
"args": [  ],
"method": "fireAttack"
} ]
}
tracks/5/type = "animation"
tracks/5/path = NodePath("AnimationPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": PoolStringArray( "fire" ),
"times": PoolRealArray( 5.5 )
}

[sub_resource type="Animation" id=167]
resource_name = "summonAttack"
length = 16.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 16 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shakeScreen"
}, {
"args": [  ],
"method": "summonAttack1"
}, {
"args": [  ],
"method": "crystalAttack"
} ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "summon_off" ),
"times": PoolRealArray( 12.1 )
}

[sub_resource type="RectangleShape2D" id=158]
extents = Vector2( 41.5, 71 )

[sub_resource type="RectangleShape2D" id=159]
extents = Vector2( 921, 276 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 54, 82.5 )

[sub_resource type="Animation" id=42]
resource_name = "BossDeath"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("DeathAnimation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathAnimation/Boss-death:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathAnimation/Boss-death2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DeathAnimation/Boss-death3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DeathAnimation/Boss-death4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.8, 1.6, 2.7, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "playRumble"
}, {
"args": [  ],
"method": "finalBossDefetedLabel"
}, {
"args": [  ],
"method": "playRumble"
}, {
"args": [  ],
"method": "playRumble"
}, {
"args": [  ],
"method": "playDeflaut"
}, {
"args": [  ],
"method": "destroyMonster"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Monster1:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.901961, 0.901961, 0.901961, 1 ), Color( 0.901961, 0.901961, 0.901961, 1 ), Color( 0.901961, 0.901961, 0.901961, 0.0392157 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Monster1:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.8, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 30 ) ]
}

[node name="Monster-Boss2" type="KinematicBody2D"]
z_index = 2
collision_layer = 0
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/fire = SubResource( 163 )
anims/fire_off = SubResource( 165 )
anims/idle = SubResource( 160 )
anims/summon = SubResource( 166 )
anims/summon_off = SubResource( 168 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 161 )
anims/idle2 = SubResource( 169 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
autoplay = "startingAnimation"
anims/deathAnimation = SubResource( 170 )
anims/fireAttack = SubResource( 164 )
anims/startingAnimation = SubResource( 162 )
anims/summonAttack = SubResource( 167 )

[node name="Monster1" type="Sprite" parent="."]
modulate = Color( 0.901961, 0.901961, 0.901961, 1 )
z_index = 2
texture = ExtResource( 4 )
offset = Vector2( 4.5, 3.5 )
hframes = 13

[node name="Boss-background" type="Sprite" parent="Monster1"]
position = Vector2( 4.49738, 3.50181 )
z_index = -2
texture = ExtResource( 5 )
hframes = 3

[node name="StartingExplosion" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0, 0.835294, 1, 0.392157 )
position = Vector2( 2.15454, 1.59589 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="CrystalHolder" type="Node2D" parent="."]

[node name="Monster-Crystal1" parent="CrystalHolder" instance=ExtResource( 7 )]
position = Vector2( -100, 100 )

[node name="Monster-Crystal2" parent="CrystalHolder" instance=ExtResource( 8 )]
position = Vector2( 125, 0 )

[node name="Monster-Crystal3" parent="CrystalHolder" instance=ExtResource( 9 )]
position = Vector2( -100, -100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -18 )
shape = SubResource( 158 )

[node name="TriggerArea" type="Area2D" parent="."]
position = Vector2( -1.5, -1.5 )
collision_mask = 0
input_pickable = false
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2( 3.5, 2.5 )
shape = SubResource( 159 )

[node name="monsterBody" type="Area2D" parent="."]
position = Vector2( -1.5, -1.5 )
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="monsterBody"]
position = Vector2( 2.5, -15 )
shape = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayerDeath" type="AnimationPlayer" parent="."]
anims/BossDeath = SubResource( 42 )

[node name="DeathAnimation" type="Node2D" parent="."]
visible = false

[node name="Boss-death" type="Sprite" parent="DeathAnimation"]
position = Vector2( -38.7525, 68.7153 )
z_index = 3
texture = ExtResource( 2 )
hframes = 6
frame = 1

[node name="Boss-death2" type="Sprite" parent="DeathAnimation"]
position = Vector2( 35.7475, 29.2153 )
z_index = 3
texture = ExtResource( 2 )
hframes = 6
frame = 5

[node name="Boss-death3" type="Sprite" parent="DeathAnimation"]
position = Vector2( -36.2525, -18.7847 )
z_index = 3
texture = ExtResource( 2 )
hframes = 6

[node name="Boss-death4" type="Sprite" parent="DeathAnimation"]
position = Vector2( 37.7475, -50.7847 )
z_index = 3
texture = ExtResource( 2 )
hframes = 6
frame = 5

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[connection signal="body_entered" from="TriggerArea" to="TriggerArea" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="TriggerArea" method="_on_Area2D_body_exited"]
